[project]
name = "ftmq"
version = "0.8.0"
description = "followthemoney query dsl and io helpers"
authors = [{ name = "Simon Wörpel", email = "simon.woerpel@pm.me" }]
license = "AGPLv3+"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11,<4"
dependencies = [
    "anystore (>=0.3.0,<0.4.0)",
    "nomenklatura (>=3.14.0,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "click-default-group (>=1.2.4,<2.0.0)",
    "orjson (>=3.10.14,<4.0.0)",
    "pyicu (>=2.14,<3.0)",
    "pydantic (>=2.10.4,<3.0.0)",
    "alephclient (>=2.6.0,<3.0.0)",
    "pycountry (>=24.6.1,<25.0.0)",
]

[project.optional-dependencies]
level = ["plyvel (>=1.5.1,<2.0.0)"]
sql = ["sqlalchemy (>=2.0.36,<3.0.0)"]
redis = ["redis (>=5.2.1,<6.0.0)", "fakeredis (>=2.26.2,<3.0.0)"]

[project.scripts]
ftmq = "ftmq.cli:cli"

[project.urls]
Homepage = "https://docs.investigraph.dev/lib/ftmq"
Documentation = "https://docs.investigraph.dev/lib/ftmq"
Repository = "https://github.com/investigativedata/ftmq"
Issues = "https://github.com/investigativedata/ftmq/issues"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3,<9.0.0"
pytest-cov = ">=4.1,<7.0"
black = ">=23.11,<25.0"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = "^4.0.1"
flake8 = ">=6.1,<8.0"
ipdb = "^0.13.13"
bump2version = "^1.0.1"
cloudpickle = ">=2.2.1,<4.0.0"
pytest-env = "^1.1.1"
bump-pydantic = ">=0.7,<0.9"
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.12.2"
mkdocs-autorefs = "^1.2.0"
mkdocs-material = "^9.5.47"
mkdocs-click = "^0.8.1"


[tool.poetry.dependencies]
anystore = {develop = true}
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
NOMENKLATURA_STATEMENT_TABLE = "test_table"
DEBUG = 1
MAX_SQL_AGG_GROUPS = 11
