[metadata]
name = ftmq
version = file: VERSION
description = An attempt towards a followthemoney query dsl
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Simon Wörpel
author_email = simon.woerpel@pm.me
url = https://github.com/investigativedata/ftmq
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires:
    banal==1.0.6
    followthemoney==3.3.0
    nomenklatura==2.9.1
    orjson==3.8.10
    PyICU==2.10.2
    structlog==23.1.0
    typer==0.7.0


[options.package_data]
ftmq = py.typed

[options.entry_points]
console_scripts =
    ftmq = ftmq.cli:cli

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
